cluster-talos/kubernetes/apps/sonarr-nl/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr-nl
  labels:
    k10.kasten.io/backup: "true"
